--- a/jupyter_notbooks/03_02_03_p_median_problem.ipynb
+++ b/jupyter_notbooks/03_02_03_p_median_problem.ipynb
@@ -11,11 +11,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install xarray"
+    "%pip install xarray"
    ]
   },
   {
